envoy/envoy_updated.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8085
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        # Requirement Analysis Agent (NEW)
                        - match:
                            prefix: "/requirementanalysis.v1.RequirementAnalysisService"
                          route:
                            cluster: requirement_analysis_service
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 120s
                        # Test Cases Agent
                        - match:
                            prefix: "/testcases.v1.TestCasesService"
                          route:
                            cluster: test_cases_service
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 120s
                        # Test Data Agent
                        - match:
                            prefix: "/testdata.v1.TestDataService"
                          route:
                            cluster: test_data_service
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 120s
                        # eCommerce Domain Agent
                        - match:
                            prefix: "/ecommerce.domain.v1.EcommerceDomainService"
                          route:
                            cluster: ecommerce_domain_service
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 120s
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: grpc-status,grpc-message
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    # Requirement Analysis Agent (NEW)
    - name: requirement_analysis_service
      connect_timeout: 0.25s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: requirement_analysis_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 9004
    # Test Cases Agent
    - name: test_cases_service
      connect_timeout: 0.25s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: test_cases_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 9003
    # Test Data Agent
    - name: test_data_service
      connect_timeout: 0.25s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: test_data_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 9091
    # eCommerce Domain Agent
    - name: ecommerce_domain_service
      connect_timeout: 0.25s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: ecommerce_domain_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 9002

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
